Last scrollbar fix

--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -12,13 +12,20 @@ figure.highlight {
   font-size: $type-size-6;
   line-height: 1.8;
   border-radius: $border-radius;
-  -webkit-scrollbar { width: 8px; height: 3px;}
-  -webkit-scrollbar-track {  background-color: #282828;}
-  -webkit-scrollbar-track-piece { background-color: #5f6060;}
+
   > pre,
   pre.highlight {
     margin: 0;
     padding: 1em;
+  }
+  pre.highlight::-webkit-scrollbar {
+    width: 8px; height: 3px;
+  }
+  pre.highlight::-webkit-scrollbar-track {
+    background-color: #282828;
+  }
+  pre.highlight::-webkit-scrollbar-track-piece {
+      background-color:#585858;
   }
 
 }
